--- a/static/css/style.css
+++ b/static/css/style.css
@@ -425,7 +425,17 @@ code, .font-monospace {
 .teacher-info .subjects {
     color: var(--text-secondary);
     font-size: 0.875rem;
+    margin: 0 0 0.25rem;
+}
+
+.teacher-info .classes {
+    color: var(--primary);
+    font-size: 0.8rem;
     margin: 0 0 0.5rem;
+}
+
+.teacher-info .classes i {
+    opacity: 0.7;
 }
 
 .status-badge {
