--- a/templates/assignment_view.html
+++ b/templates/assignment_view.html
@@ -42,7 +42,7 @@
     <div class="row">
         <!-- Left: Assignment Details -->
         <div class="col-lg-6 mb-4">
-            <div class="card h-100">
+            <div class="card">
                 <div class="card-header bg-primary text-white">
                     <h5 class="mb-0"><i class="bi bi-file-text me-2"></i>Assignment Details</h5>
                 </div>
